Style: Recalibrate brand logo heights to fit inside fixed headers without stretching navbar height

--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -35,7 +35,7 @@
 }
 
 .logoImage {
-    height: 74px !important;
+    height: 52px !important;
     width: auto !important;
     object-fit: contain;
 }
@@ -435,7 +435,7 @@
 
     .logoImage {
         display: block !important;
-        height: 54px !important;
+        height: 48px !important;
         width: auto !important;
         object-fit: contain;
     }
@@ -586,7 +586,7 @@
     }
 
     .logoImage {
-        height: 48px !important;
+        height: 42px !important;
     }
 
     /* Tweak menu button size/hit area */
